// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pagination renders all props 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "flexDirection": "row",
        "height": 28.125,
        "justifyContent": "center",
        "marginVertical": 16.675,
        "position": "absolute",
      },
      Object {},
    ]
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_0"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_1"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_2"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_3"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_4"
  />
</View>
`;

exports[`pagination renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "flexDirection": "row",
        "height": 28.125,
        "justifyContent": "center",
        "marginVertical": 16.675,
        "position": "absolute",
      },
      Object {},
    ]
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_0"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "gray",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_1"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "gray",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_2"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "gray",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_3"
  />
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "gray",
        "borderRadius": 25,
        "height": 28.125,
        "marginHorizontal": 18.75,
        "opacity": 1,
        "width": 28.125,
      }
    }
    testID="_pagination_4"
  />
</View>
`;
